tests/snapshots/07_scrabble_all_options_02_BoundedWindowAggExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+---------------+----------------+---------------+
| region_name | nation_name   | scrabble_score | rank()        |
|             |               |                | PARTITION BY  |
|             |               |                | [nation_score |
|             |               |                | s.region_name |
|             |               |                | ] ORDER BY    |
|             |               |                | [nation_score |
|             |               |                | s.scrabble_sc |
|             |               |                | ore DESC      |
|             |               |                | NULLS FIRST]  |
|             |               |                | RANGE BETWEEN |
|             |               |                | UNBOUNDED     |
|             |               |                | PRECEDING AND |
|             |               |                | CURRENT ROW   |
|=============+===============+================+===============|
| AMERICA     | BRAZIL        | 17             | 1             |
|-------------+---------------+----------------+---------------|
| AMERICA     | UNITED STATES | 13             | 2             |
|-------------+---------------+----------------+---------------|
| AMERICA     | ARGENTINA     | 10             | 3             |
|-------------+---------------+----------------+---------------|
| AMERICA     | CANADA        | 9              | 4             |
|-------------+---------------+----------------+---------------|
| AMERICA     | PERU          | 6              | 5             |
+-------------+---------------+----------------+---------------+
