tests/snapshots/08_recursive_trace.snap
---
source: tests/integration_tests.rs
expression: json_lines
---
[
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "name": "read_query",
      "query": "WITH RECURSIVE numbers(n) AS (\n    SELECT 1 AS n\n    UNION ALL\n    SELECT n + 1 FROM numbers WHERE n < 3\n) SELECT n FROM numbers"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::query",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "logical_plan": "Projection: numbers.n [n:Int64]\n  SubqueryAlias: numbers [n:Int64]\n    Projection: n AS n [n:Int64]\n      RecursiveQuery: is_distinct=false [n:Int64]\n        Projection: Int64(1) AS n [n:Int64]\n          EmptyRelation: rows=1 []\n        Projection: numbers.n + Int64(1) [numbers.n + Int64(1):Int64]\n          Filter: numbers.n < Int64(3) [n:Int64]\n            TableScan: numbers [n:Int64]",
      "name": "parse_sql",
      "sql": "WITH RECURSIVE numbers(n) AS (\n    SELECT 1 AS n\n    UNION ALL\n    SELECT n + 1 FROM numbers WHERE n < 3\n) SELECT n FROM numbers"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::query",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "name": "create_physical_plan",
      "physical_plan": "RecursiveQueryExec: name=numbers, is_distinct=false\n  ProjectionExec: expr=[1 as n]\n    PlaceholderRowExec\n  CoalescePartitionsExec\n    ProjectionExec: expr=[n@0 + 1 as numbers.n + Int64(1)]\n      CoalesceBatchesExec: target_batch_size=8192\n        FilterExec: n@0 < 3\n          RepartitionExec: partitioning=RoundRobinBatch(8), input_partitions=1\n            WorkTableExec: name=numbers\n"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::query",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "RepartitionExec: partitioning=RoundRobinBatch(8), input_partitions=1",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "RepartitionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      },
      {
        "datafusion.boundedness": "Bounded",
        "datafusion.emission_type": "Incremental",
        "datafusion.partitioning": "UnknownPartitioning(1)",
        "env": "production",
        "name": "InstrumentedExec",
        "otel.name": "RecursiveQueryExec",
        "region": "us-west"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "FilterExec: n@0 < 3",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "FilterExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      },
      {
        "datafusion.boundedness": "Bounded",
        "datafusion.emission_type": "Incremental",
        "datafusion.partitioning": "UnknownPartitioning(1)",
        "env": "production",
        "name": "InstrumentedExec",
        "otel.name": "RecursiveQueryExec",
        "region": "us-west"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "CoalesceBatchesExec: target_batch_size=8192",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "CoalesceBatchesExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      },
      {
        "datafusion.boundedness": "Bounded",
        "datafusion.emission_type": "Incremental",
        "datafusion.partitioning": "UnknownPartitioning(1)",
        "env": "production",
        "name": "InstrumentedExec",
        "otel.name": "RecursiveQueryExec",
        "region": "us-west"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "ProjectionExec: expr=[n@0 + 1 as numbers.n + Int64(1)]",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "ProjectionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      },
      {
        "datafusion.boundedness": "Bounded",
        "datafusion.emission_type": "Incremental",
        "datafusion.partitioning": "UnknownPartitioning(1)",
        "env": "production",
        "name": "InstrumentedExec",
        "otel.name": "RecursiveQueryExec",
        "region": "us-west"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "CoalescePartitionsExec",
      "datafusion.partitioning": "UnknownPartitioning(1)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "CoalescePartitionsExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      },
      {
        "datafusion.boundedness": "Bounded",
        "datafusion.emission_type": "Incremental",
        "datafusion.partitioning": "UnknownPartitioning(1)",
        "env": "production",
        "name": "InstrumentedExec",
        "otel.name": "RecursiveQueryExec",
        "region": "us-west"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "RepartitionExec: partitioning=RoundRobinBatch(8), input_partitions=1",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "RepartitionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      },
      {
        "datafusion.boundedness": "Bounded",
        "datafusion.emission_type": "Incremental",
        "datafusion.partitioning": "UnknownPartitioning(1)",
        "env": "production",
        "name": "InstrumentedExec",
        "otel.name": "RecursiveQueryExec",
        "region": "us-west"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "FilterExec: n@0 < 3",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "FilterExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      },
      {
        "datafusion.boundedness": "Bounded",
        "datafusion.emission_type": "Incremental",
        "datafusion.partitioning": "UnknownPartitioning(1)",
        "env": "production",
        "name": "InstrumentedExec",
        "otel.name": "RecursiveQueryExec",
        "region": "us-west"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "CoalesceBatchesExec: target_batch_size=8192",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "CoalesceBatchesExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      },
      {
        "datafusion.boundedness": "Bounded",
        "datafusion.emission_type": "Incremental",
        "datafusion.partitioning": "UnknownPartitioning(1)",
        "env": "production",
        "name": "InstrumentedExec",
        "otel.name": "RecursiveQueryExec",
        "region": "us-west"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "ProjectionExec: expr=[n@0 + 1 as numbers.n + Int64(1)]",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "ProjectionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      },
      {
        "datafusion.boundedness": "Bounded",
        "datafusion.emission_type": "Incremental",
        "datafusion.partitioning": "UnknownPartitioning(1)",
        "env": "production",
        "name": "InstrumentedExec",
        "otel.name": "RecursiveQueryExec",
        "region": "us-west"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "CoalescePartitionsExec",
      "datafusion.partitioning": "UnknownPartitioning(1)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "CoalescePartitionsExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      },
      {
        "datafusion.boundedness": "Bounded",
        "datafusion.emission_type": "Incremental",
        "datafusion.partitioning": "UnknownPartitioning(1)",
        "env": "production",
        "name": "InstrumentedExec",
        "otel.name": "RecursiveQueryExec",
        "region": "us-west"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "PlaceholderRowExec",
      "datafusion.partitioning": "UnknownPartitioning(1)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "PlaceholderRowExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "ProjectionExec: expr=[1 as n]",
      "datafusion.partitioning": "UnknownPartitioning(1)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "ProjectionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "WorkTableExec: name=numbers",
      "datafusion.partitioning": "UnknownPartitioning(1)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "WorkTableExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "RepartitionExec: partitioning=RoundRobinBatch(8), input_partitions=1",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "RepartitionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "FilterExec: n@0 < 3",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "FilterExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "CoalesceBatchesExec: target_batch_size=8192",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "CoalesceBatchesExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "ProjectionExec: expr=[n@0 + 1 as numbers.n + Int64(1)]",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "ProjectionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "CoalescePartitionsExec",
      "datafusion.partitioning": "UnknownPartitioning(1)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "CoalescePartitionsExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "RecursiveQueryExec: name=numbers, is_distinct=false",
      "datafusion.partitioning": "UnknownPartitioning(1)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "RecursiveQueryExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      },
      {
        "name": "run_traced_query",
        "query_name": "recursive"
      }
    ],
    "target": "integration_utils::session",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "name": "run_traced_query",
      "query_name": "recursive"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "08_recursive"
      }
    ],
    "target": "integration_utils::query",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  }
]
